--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Neil Harm | Portfolio"
+      content="Professional Branding & Design Portfolio"
     />
     <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
